<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="all_image">All Images</string>
    <string name="channel_error_title">Connection error</string>
    <string name="ok">OK</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="str_recorder_normal">Hold and talk</string>
    <string name="str_recorder_recording">Release End</string>
    <string name="str_recorder_want_cancel">Release your finger and cancel sending</string>
    <string name="save_ing">Save Picture.</string>
    <string name="please_agree_camera_permissions">Please agree to camera permissions</string>
    <string name="please_grant_voice_permission">Please grant voice permission</string>
    <string name="default_notification_channel_id">my_service3</string>
    <string name="ice_connect_failed">connection failed</string>
    <string name="no_camera_detected">No camera detected!</string>
    <string name="cancel">Cancel</string>
    <string name="cut_voice_call">Cut to voice call</string>
    <string name="conversion_camera">Switch camera</string>
    <string name="has_hung_up">Has hung up</string>
    <string name="wait_other_join">Waiting for the other party to join</string>
    <string name="the_other_party_has_left">Caller hung up, the call ends.</string>
    <string name="hands_free">Speaker</string>
    <string name="loud_speaker">Mute</string>
    <string name="answer_caller">Answer</string>
    <string name="refused">Refuse</string>
    <string name="hang_up">Hang up</string>
    <string name="rejected_chat_ended">Rejected, chat ended</string>
    <string name="abnormal_operation">Abnormal operation</string>
    <string name="other_party_is_busy">The other party is busy!</string>
    <string name="switch_to_voice_call">Switch to voice call</string>
    <string name="cut_to_voice_call">Switched to voice call</string>
    <string name="mine">Mine</string>
    <string name="the_other_party_mobile_phone_may_around">Please try again later</string>
    <string name="connection_timed_out">Connection timed out</string>
    <string name="data_base_init_fail">Database initialization failed</string>
    <string name="exit_login">Log out</string>
    <string name="setting">Setting</string>
    <string name="account_setting">Reset Password</string>
    <string name="storage_space">Storage Space</string>
    <string name="blacklist">Blocked List</string>
    <string name="language">Language Selection</string>
    <string name="feedback">Feedback Problems</string>
    <string name="about_tillo">About Aillo</string>
    <string name="message">Message</string>
    <string name="chat">Chats</string>
    <string name="me">Mine</string>
    <string name="calls">Calls</string>
    <string name="personal_information">Personal Information</string>
    <string name="avatar">Profile photo</string>
    <string name="nick_name">Nickname</string>
    <string name="sex">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="signature">Add your bio</string>
    <string name="adress">Region</string>
    <string name="woman">Female</string>
    <string name="man">Male</string>
    <string name="image_uploading">Uploading</string>
    <string name="start_group_chat">New chat</string>
    <string name="new_friend">New Contracts</string>
    <string name="add_friend">Add Contacts</string>
    <string name="scan_it">Scan</string>
    <string name="chat_video_type">[Video]</string>
    <string name="chat_voice_type">[Audio]</string>
    <string name="chat_file_type">[File]</string>
    <string name="chat_picture_type">[Picture]</string>
    <string name="remark">Remarks</string>
    <string name="top_chat">Sticky on Top</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="clear_conversation">Clear chat</string>
    <string name="delete_contact">Delete</string>
    <string name="contact">Contacts</string>
    <string name="complaint">Report</string>
    <string name="return_back">Return</string>
    <string name="search">Search</string>
    <string name="group_list">Group list</string>
    <string name="cache_tips">Clear the file cache</string>
    <string name="update_date">Update Date</string>
    <string name="copyright">Copyright 2018 © Aillo.All Rights Reserved</string>
    <string name="copyright_tips" />
    <string name="today">Today</string>
    <string name="chat_time">Chat Time</string>
    <string name="cancelled">Cancelled</string>
    <string name="other_cancelled">Call cancelled by caller</string>
    <string name="refused_a">Declined</string>
    <string name="other_refused">Call declined by user</string>
    <string name="connect_fail">Connect Fail</string>
    <string name="video_call">Video call</string>
    <string name="audio_call">Voice call</string>
    <string name="group_chat">Group Chat</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="choose_the_action_to_perform">Choose the action to perform</string>
    <string name="sure_you_want_to_delete_it">You sure you want to delete it</string>
    <string name="sure">Sure</string>
    <string name="sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="yesterday">Yesterday</string>
    <string name="Camera">Camera</string>
    <string name="album">Album</string>
    <string name="slip_on_your_finger_cancel_sending">Slide up to cancel</string>
    <string name="finger_swipe_and_cancel_sending">Slide up to cancel</string>
    <string name="release_your_finger_and_cancel_sending">Release to cancel</string>
    <string name="recording_time_is_too_short">Recording time is too short</string>
    <string name="About">About</string>
    <string name="contact_number">Contact Number</string>
    <string name="feedback_successful">Feedback Successful!</string>
    <string name="commit">Submit</string>
    <string name="modify_username">Modify UserName</string>
    <string name="modify_address">Modify Address</string>
    <string name="modify_signature">Modify Signature</string>
    <string name="information_cannot_empty">Information cannot empty</string>
    <string name="Complete">Done</string>
    <string name="modify_sex">Modify Sex</string>
    <string name="information_loading">Information Loading</string>
    <string name="remarks_cannot_be_empty">Remarks cannot be empty！</string>
    <string name="setting_remark">Set Remark</string>
    <string name="group_chat_settings">Group chat settings</string>
    <string name="clear_all_information">Once deleted,all chat messages will be cleared</string>
    <string name="delete_message">Delete message</string>
    <string name="exit_the_group">Exit the group</string>
    <string name="exit_group">Delete and Leave</string>
    <string name="see_more_members">See more members</string>
    <string name="group_chat_name">Group name</string>
    <string name="message_do_not_disturb">Mute Notifications</string>
    <string name="modify_group_name">Edit group name</string>
    <string name="the_group_name_cannot_be_empty">The group name cannot be empty!</string>
    <string name="select_contact">Select Contacts</string>
    <string name="create_group">Group Chat</string>
    <string name="whether_to_clear_the_cache">Whether to clear the cache</string>
    <string name="tips">Tips</string>
    <string name="a_friend_request_has_been_sent">Friend request sent！</string>
    <string name="verify_message">verification information</string>
    <string name="send">Send</string>
    <string name="send_apply">Send(%1$d)</string>
    <string name="other_need_you_write_verify_message">Fill in the verification information</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_the_new_password_again">Enter the password again</string>
    <string name="background">Background</string>
    <string name="old_password_cannot_be_empty">Old password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New password cannot be empty</string>
    <string name="the_new_passwords_are_inconsistent">Inconsistent new password</string>
    <string name="modify_successful">Modify successful</string>
    <string name="change_password">Reset Password</string>
    <string name="modify_note">Set remarks</string>
    <string name="the_complaint_is_successful">Successful！</string>
    <string name="spreading_inappropriate_content_harasses_me">Lewd or harassing content</string>
    <string name="fraudulent_information_for_a_variety_of_reasons">Fraud</string>
    <string name="making_inappropriate_remarks">Inappropriate remarks</string>
    <string name="violation_of_the_terms_of_service_or_privacy_statement">Violation of the Terms of Service or Privacy Statement</string>
    <string name="login">Log In</string>
    <string name="retrieve_password">Retrieve the password</string>
    <string name="register">Sign Up</string>
    <string name="the_country_number_cannot_be_empty">Country code cannot be empty!</string>
    <string name="send_verify_code">Send</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="country_code">Region</string>
    <string name="invite_tips">Invitation link</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="wechat_invite">WeChat</string>
    <string name="copy_link">Copy Link</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="invite_linkman">Call history</string>
    <string name="invite_register">Invitation registration</string>
    <string name="enter_your_friend_mobile_number">Enter your friend is mobile number</string>
    <string name="share_link">Welcome to Aillo, communicating with family and friends anytime, Please go to https://dl.aillo.cc for free download now.</string>
    <string name="add_group_members">Add group members</string>
    <string name="group_member_info">Group member information</string>
    <string name="mute_disturb">Mute/Disturb</string>
    <string name="delete_member">Delete member</string>
    <string name="waiting_to_be_answer">Waiting to be answer...</string>
    <string name="use_receiver_to_answer">Use receiver to answer</string>
    <string name="set_nick_name">Set nickname</string>
    <string name="add">Add</string>
    <string name="forgot_password">Password Retrieval</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="no_account_please_code">No account yet? Please sign up.</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="register_to_agree_service">Agree to&#160;</string>
    <string name="service_terms">Terms of Service</string>
    <string name="privacy_terms">&#160;Privacy Policy</string>
    <string name="siging">by signing up</string>
    <string name="he">and</string>
    <string name="have_an_account_please_login">Have an account? Please login</string>
    <string name="no_account">No account</string>
    <string name="please_register">Please register</string>
    <string name="new_secret_chat">New Secret Chat</string>
    <string name="new_secret_group_chat">New Secret Group Chat</string>
</resources>