<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_message"
        android:icon="@mipmap/ic_navigation_chat_normal"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_calls"
        android:icon="@drawable/ic_phone"
        android:title="@string/calls" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@mipmap/ic_navigation_contact"
        android:title="@string/contact" />

<!--    <item-->
<!--        android:id="@+id/navigation_trend"-->
<!--        android:icon="@drawable/ic_trend"-->
<!--        android:title="@string/trend" />-->
    <item
        android:id="@+id/navigation_mine"
        android:icon="@mipmap/ic_navigation_mine_normal"
        android:title="@string/me" />
</menu>